# KVCore

./: .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  pyproject.toml
.github/agents/: vllm-tech-route-review.agent.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_STAGES.md
example/: demo.py
kvcore/: __init__.py  config.py  logging.py
notes/: attention-abstraction-design.md  attention-vllm-diff-2026-04-25.md  current-architecture-flow.md  current-problems-roadmap-2026-04-24.md  kv-block-pool-design.md  kv-block-sparsity-design-plan-2026-05-05.md  kv-cache-offload-vllm-inspired-plan-2026-04-28.md  kv-cache-profile-oom-analysis-2026-05-04.md  kv-manager-interface-design.md  kv-scheduler-modelrunner-redesign.md  kv-sparse-architecture-review-2026-05-06.md  kv-sparse-breaking-refactor-plan-2026-05-06.md  kvcore-sparse-vs-blockwisepress-diagnosis-2026-05-06.md  kvmanager-e2e-readiness-check.md  llama3-flow-test-report.md  llama3-implementation-plan.md  model-loading-design.md  model-loading-live-test.md  model-loading-modelrunner-alignment-2026-05-01.md  modelrunner-next-stage-plan-2026-04-27.md  modelrunner-vllm-alignment-plan-2026-04-27.md  performance-analysis-import-loading-2026-04-29.md  real-performance-bottleneck-analysis-2026-04-29.md  request-data-structure-design.md  scheduler-modelrunner-vllm-diff-2026-04-29.md  shared-kv-cache-tensor-design.md  tokenizer-dataclass-e2e-review-2026-04-24.md  vllm-sliding-window-inspiration-for-kv-sparse-2026-05-06.md
scripts/: run_llm_engine_offline_batch.py  run_offline_batch_debug.py
tests/: test_async_llm_engine.py  test_block_table.py  test_kv_block_pool.py  test_kv_compression.py  test_kv_manager.py  test_llama3_flow.py  test_llm_engine.py  test_llm_engine_live.py  test_logging.py  test_model_loading.py  test_model_runner_kv_boundary.py  test_request.py  test_request_queue.py  test_sampler.py  test_scheduler.py  test_tokenizer_manager.py  test_torch_paged_attention.py  test_triton_paged_attention.py
(+97 files in other folders)
